k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: planera-staging
  labels:
    name: planera-staging
    environment: staging
